# read-mpu6050-pi

./: CMakeLists.txt  README.md  main.cpp
